# pamagotchi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
actor/: Cargo.toml
actor/src/: lib.rs
actor/src/core/: action.rs  actor.rs  decision.rs  event.rs  handle.rs  lifecycle.rs  metrics.rs  mind.rs  mod.rs  prompt.rs  registry.rs  session.rs  state.rs  tools.rs
actor/src/core/actor/: mod.rs
actor/src/core/actor/tests/: mod.rs  replay_tests.rs  scheduler_consolidation_tests.rs  scheduler_intent_tests.rs  scheduler_message_tests.rs
actor/src/core/handle/: mod.rs
actor/src/core/handle/tests/: mod.rs
actor/src/core/ingest/: adoption.rs  identity.rs  mod.rs  normalize.rs  observation.rs
actor/src/core/metrics/: mod.rs
actor/src/core/metrics/tests/: mod.rs
actor/src/core/mind/: activity.rs  completion.rs  evaluate.rs  event.rs  injection.rs  maintenance.rs  message_events.rs  mod.rs  respond.rs  spawn.rs  triggered.rs  typing.rs  typing_state.rs
actor/src/core/mind/evaluate/: mod.rs
actor/src/core/mind/tests/: approval_tests.rs  consolidation_tests.rs  deferral_tests.rs  event_recovery_tests.rs  intent_completion_tests.rs  lifecycle_tests.rs  mod.rs  profile_ingest_tests.rs  review_trigger_tests.rs  typing_tests.rs
actor/src/core/prompt/: action.rs  context.rs  conversation.rs  directives.rs  format.rs  identity.rs  mind.rs  mod.rs  person.rs  profile.rs  templates.rs
actor/src/core/prompt/templates/: action.j2  action_task_consolidate.j2  action_task_outreach.j2  action_task_research.j2  action_task_respond.j2  action_task_review.j2  action_task_ruminate.j2  mind.j2
actor/src/core/prompt/tests/: group_directive_tests.rs  identity_context_tests.rs  identity_tests.rs  mod.rs  outreach_prompt_tests.rs  review_prompt_tests.rs
actor/src/core/registry/: mod.rs
actor/src/core/registry/tests/: mod.rs
actor/src/core/review/: apply.rs  mod.rs  prompt.rs  schema.rs
actor/src/core/review/apply/: conversation.rs  directives.rs  memory.rs  mod.rs  open_loops.rs  profile.rs  relationships.rs
actor/src/core/scheduler/: coalesce.rs  idle.rs  intents.rs  mod.rs
actor/src/core/session/: composing.rs  messages.rs  mod.rs  result.rs  snapshot.rs  stream.rs  tests.rs  tool_calls.rs
actor/src/core/session/stream/: mod.rs
actor/src/core/session/tests/: composing_tests.rs  message_tests.rs  mod.rs  response_retry_tests.rs
actor/src/core/session/tool_calls/: mod.rs
actor/src/core/social_read/: mod.rs  packs.rs  retrieval.rs  timing.rs
actor/src/core/tools/: context.rs  decision.rs  intent.rs  memory.rs  messaging.rs  mod.rs  permission.rs  person.rs  reflection.rs  review.rs  time.rs  util.rs
actor/src/core/tools/decision/: mod.rs
actor/src/core/tools/intent/: mod.rs
actor/src/core/tools/memory/: form.rs  helpers.rs  mod.rs  (+2 more)
actor/src/identity/: alias.rs  claim.rs  group.rs  identity.rs  mod.rs  person.rs  profile.rs  relation.rs
actor/src/llm/: message.rs  middleware.rs  mod.rs  openai.rs  provider.rs  request.rs  response.rs  stream.rs  tool.rs
actor/src/personality/: belief.rs  delta.rs  directive.rs  interest.rs  mod.rs  relationship.rs  state.rs  traits.rs
actor/src/platform/: adapter.rs  content.rs  mod.rs  router.rs  whatsapp.rs
actor/src/state/: actor.rs  adoption.rs  affect.rs  belief.rs  config.rs  delta.rs  directive.rs  interest.rs  mod.rs  relationship.rs
actor/src/state/actor/: mod.rs
actor/src/store/: action_log.rs  audit.rs  channel.rs  conversation.rs  event_inbox.rs  intent.rs  memory.rs  mod.rs  query.rs  snapshot.rs  sqlite.rs  store.rs  thought.rs
actor/src/store/sqlite/: action_log.rs  channel.rs  conversation.rs  debug.rs  directive.rs  event_inbox.rs  group.rs  identity.rs  intent.rs  memory.rs  migrations.rs  mod.rs  person.rs  rows.rs  schema.rs  snapshot.rs  social_graph.rs  support.rs  tests.rs  thought.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
cli/src/tui/widgets/: actor_item.rs  actor_list.rs  button.rs  debug_panel.rs  greeting_item.rs  input_box.rs  list_item_button.rs  message_item.rs  message_list.rs  mod.rs
gateway/: Cargo.toml
gateway/src/: adapter.rs  content.rs  discord.rs  lib.rs  local.rs  relay.rs  router.rs  runtime.rs  storage.rs  whatsapp.rs
gateway/src/content/: mod.rs
gateway/src/content/tests/: mod.rs
gateway/src/discord/: config.rs  message.rs  mod.rs  tests.rs
gateway/src/discord/tests/: mod.rs
gateway/src/router/: mod.rs
gateway/src/router/tests/: mod.rs
gateway/src/storage/tests/: mod.rs
gateway/src/whatsapp/: events.rs  inbound.rs  mod.rs  outbound.rs  tests.rs
gateway/src/whatsapp/tests/: mod.rs
media/: Cargo.toml
media/src/: asset.rs  lib.rs  store.rs
media/src/store/: mod.rs
media/src/store/tests/: mod.rs
pamagotchi/: Cargo.toml
pamagotchi/src/: debug_view.rs  main.rs
pamagotchi/src/debug_view/: mod.rs
pamagotchi/src/debug_view/tests/: mod.rs
pamagotchi/src/tui/: app.rs  event.rs  focus.rs  mod.rs  theme.rs  ui.rs
pamagotchi/src/tui/app/: api.rs  gateways.rs  input.rs  mod.rs  scroll.rs
pamagotchi/src/tui/screens/: chat.rs  debug.rs  gateway_detail.rs  gateways.rs  mod.rs  settings.rs
pamagotchi/src/tui/widgets/: breadcrumb.rs  button.rs  character_view.rs  creature_view.rs  greeting.rs  input_box.rs  message_list.rs  mod.rs  selectable.rs
pamagotchid/: Cargo.toml
pamagotchid/src/: config.rs  main.rs  server.rs
pamagotchid/src/config/: mod.rs
pamagotchid/src/config/tests/: mod.rs
pamagotchid/src/server/: api.rs  debug_snapshot.rs  events.rs  gateways.rs  inference_router.rs  media_assets.rs  mod.rs  time.rs
pamagotchid/src/server/tests/: debug_snapshot_tests.rs  encoding_tests.rs  gateway_event_tests.rs  inbound_bridge_tests.rs  mod.rs
relay/: Cargo.toml
relay/src/: api.rs  lib.rs
relay/src/api/tests/: mod.rs
runtime/: Cargo.toml
runtime/src/: config.rs  main.rs  server.rs
spec/behaviour/runner/: Cargo.toml
spec/behaviour/runner/src/: capture.rs  checks.rs  execution.rs  input.rs  json.rs  main.rs  runtime.rs  seed.rs  validation.rs  vocabulary.rs  world.rs
(+296 files in other folders)
