[workspace]
members = ["actor", "protocol", "runtime", "cli"]
exclude = ["agentos"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
actor = { path = "actor" }
protocol = { path = "protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
