[workspace]
members = ["actor", "protocol", "runtime", "cli", "character"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
actor = { path = "actor" }
protocol = { path = "protocol" }
runtime = { path = "runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
character = { path = "character" }
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
