[workspace]
members = ["actor", "inference", "gateway", "protocol", "pamagotchid", "relay", "pamagotchi", "character"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
actor = { path = "actor" }
inference = { path = "inference" }
gateway = { path = "gateway" }
protocol = { path = "protocol" }
pamagotchid = { path = "pamagotchid" }
relay = { path = "relay" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yaml_serde = "0.10"
clap = { version = "4", features = ["derive"] }
character = { path = "character" }
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
