[package]
name = "actor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sqlite-vec = "0.1.9"
tokio.workspace = true
qrcode = "0.14"
tracing.workspace = true
whatsapp-rust = { git = "https://github.com/oonid/whatsapp-rust-sqlx", default-features = false, features = ["sqlite-storage", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native", "signal", "moka-cache"] }
whatsapp-rust-sqlite-storage = { git = "https://github.com/oonid/whatsapp-rust-sqlx", default-features = false }
whatsapp-rust-tokio-transport = { git = "https://github.com/oonid/whatsapp-rust-sqlx" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oonid/whatsapp-rust-sqlx" }
