[package]
name = "actor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
protocol.workspace = true
inference.workspace = true
gateway.workspace = true
anyhow.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
minijinja = "2"
nanoid = "0.4"
chrono-tz = "0.10"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sqlite-vec = "0.1.9"
tokio.workspace = true
tracing.workspace = true
