[package]
name = "pamagotchi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "pamagotchi"
path = "src/main.rs"

[dependencies]
actor.workspace = true
character.workspace = true
runtime.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
