[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
protocol.workspace = true
relay.workspace = true
media.workspace = true
anyhow.workspace = true
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
qrcode = "0.14"
serde.workspace = true
serde_json.workspace = true
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
tokio.workspace = true
tracing.workspace = true
yaml_serde.workspace = true
whatsapp-rust = { git = "https://github.com/oonid/whatsapp-rust-sqlx", default-features = false, features = ["sqlite-storage", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native", "signal", "moka-cache"] }
whatsapp-rust-sqlite-storage = { git = "https://github.com/oonid/whatsapp-rust-sqlx", default-features = false }
whatsapp-rust-tokio-transport = { git = "https://github.com/oonid/whatsapp-rust-sqlx" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oonid/whatsapp-rust-sqlx" }
