[package]
name = "media"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
nanoid = "0.4"
protocol.workspace = true
rusqlite = { version = "0.38.0", features = ["bundled-full"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
