[package]
name = "relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
protocol.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
