[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
actor.workspace = true
protocol.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
