[package]
name = "behaviour-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
actor.workspace = true
anyhow.workspace = true
async-trait = "0.1"
clap.workspace = true
gateway.workspace = true
inference.workspace = true
media.workspace = true
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yaml_serde.workspace = true
